what about now?

--- a/application/app.html
+++ b/application/app.html
@@ -31,7 +31,7 @@ title:  Generate Page
 
   <!-- Menu -->
   <div data-offcanvas="menu">
-  {% include menubar.html %}
+  {% include navbar.html %}
   </div><!-- end of .offcanvas-menu -->
 
   <div id="trashbin"></div>
