--- a/application/off-canvas.html
+++ b/application/off-canvas.html
@@ -10,6 +10,7 @@ title:  Off Canvas Revision
 <div data-off-canvas>
 
   <div data-offcanvas="menu">
+  {% include navbar.html %}
   </div>
 
   <div class="container-fluid" id="index">
